repair compatibility of ie10

--- a/groupIntro.html
+++ b/groupIntro.html
@@ -25,7 +25,7 @@
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
                 <div class="Liz-flex-1">
-                    <a href="index.html"><img src="images/page1/logo.png"></a>
+                    <a class="go-header"><img src="images/page1/logo.png"></a>
                 </div>
                 <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
@@ -150,12 +150,13 @@ c)  快速学习，快速改进（核心是快速改进）
             <div id="time-axis" class="Liz-container">
                 <div class="time-axis"></div>
                 <div class="time-arrow"></div>
+                <div class="time-label"></div>
                 <ul class="time-years Liz-flex Liz-container Liz-relative">
                     <li class="Liz-flex-1"></li>
                     <li class="Liz-flex-1"></li>
                     <li class="Liz-flex-1 time-year Liz-pointer">2006</li>
                     <li class="Liz-flex-1 time-year Liz-pointer">2007</li>
-                    <li class="Liz-flex-1 time-year Liz-pointer active">2008</li>
+                    <li class="Liz-flex-1 time-year Liz-pointer">2008</li>
                     <li class="Liz-flex-1 time-year Liz-pointer">2009</li>
                     <li class="Liz-flex-1 time-year Liz-pointer">2010</li>
                     <li class="Liz-flex-1 time-year Liz-pointer">2011</li>
@@ -455,7 +456,7 @@ c)  快速学习，快速改进（核心是快速改进）
             <div class="section Liz-border-vertical Liz-bg-default">
                 <div class="Liz-container Liz-margin-vertical-lg">
                     <div class="Liz-flex  Liz-flex-justify-center">
-                        <img id="go-header" class="go-header" src="images\page1\top.png">
+                        <img class="go-header" src="images\page1\top.png">
                     </div>
                 </div>
             </div>
@@ -526,6 +527,7 @@ c)  快速学习，快速改进（核心是快速改进）
     </div>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script src="js/tab.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/headroom.min.js"></script>
     <script src="js/jquery.headroom.min.js"></script>
