--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
                 <div class="Liz-flex Liz-flex-align-center">
                     <div class="Liz-flex-1">
-                         <a href="index.html"><img src="images/page1/logo.png"></a>
+                         <a class="go-header"><img src="images/page1/logo.png"></a>
                     </div>
                     <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                         <li class="active dropdown Liz-flex-1">
-                            <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" href="#" id="dropdownMenu1">关于卓尚</a>
+                            <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1">关于卓尚</a>
                             <ul aria-labelledby="dropdownMenu1" class="dropdown-menu">
                                 <li>
                                     <a href="./groupIntro.html#culture">集团文化</a>
@@ -179,7 +179,7 @@
                 </div>
             </div>
 
-                    <div class="Liz-border-vertical" id="footer">
+        <div class="Liz-border-vertical" id="footer">
             <!-- 品牌 -->
             <div class="section">
                 <div class="Liz-container">
