--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
             <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
                 <div class="Liz-flex Liz-flex-align-center">
                     <div class="Liz-flex-1">
-                         <a href="index.html"><img src="images/page1/logo.png"></a>
+                         <a class="go-header"><img src="images/page1/logo.png"></a>
                     </div>
                     <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                         <li class="active dropdown Liz-flex-1">
@@ -104,6 +104,76 @@
                     <div class="newList-item clearfix vmove">
                         <div class="imgbox">
                             <img src="./images/page7/new1.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.asp?sid=233">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.asp?sid=233">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.asp?sid=233">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.asp?sid=233">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
+                        </div>
+                        <div class="introbox">
+                            <div class="tc4">
+                                <strong>DESIGNICE品牌2016年夏季新品发布会</strong>
+                            </div>
+                            <div class="introCon">
+                                2015年11月7日，DESIGNICE（迪赛尼斯）将行走墨西哥获取的源源灵感融入新一季的创作中，以“慢行·最生活”为主题开启2016年夏季新品发布会。
+                            </div>
+                            <a class="details vmove" href="newsdetail.asp?sid=233">DETAILS</a>
+                        </div>
+                    </div>
+                    <div class="newList-item clearfix vmove">
+                        <div class="imgbox">
+                            <img src="./images/page7/new2.png">
                         </div>
                         <div class="introbox">
                             <div class="tc4">
@@ -233,6 +303,7 @@
             </div>
         </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/headroom.min.js"></script>
         <script src="js/jquery.headroom.min.js"></script>
         <script type="text/javascript" src="js/base.js"></script>
