update split css

--- a/src/tpl/footer.html
+++ b/src/tpl/footer.html
@@ -5,14 +5,14 @@
             <div class="Liz-flex-1 Liz-border-right">
                 <img src="../images/page1/logo1.png" alt="">
             </div>
-            <div class="Liz-flex-1 Liz-border-right Liz-text-center">nn
+            <div class="Liz-flex-1 Liz-border-right Liz-text-center">
                 <img src="../images/page1/logo2.png" alt="">
             </div>
             <div class="Liz-flex-1 Liz-text-center">
-                <img src="../images/page1/logo3.png" alt="">
+                <img src="../images/page1/logo4.png" alt="">
             </div>
             <div class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
-                <img src="../images/page1/logo4.png" alt="">
+                <img src="../images/page1/logo3.png" alt="">
             </div>
             <div class="Liz-flex-1 text-right">
                 <img src="../images/page1/logo5.png" alt="">
@@ -29,43 +29,43 @@
     </div>
 </div>
 <footer class="section">
-    <div class="Liz-container Liz-padding-vertical-lg">
+    <div class="Liz-container" style="padding-top: 20px;padding-bottom: 50px">
         <div class="Liz-flex">
             <div class="Liz-flex-1 Liz-flex">
 
                 <ul class="footList Liz-flex-1">
-                    <li class="Liz-text-lg">关于卓尚</li>
+                    <li class="Liz-text-lg"><a href="./groupIntro.html">关于卓尚</a></li>
                     <hr>
-                    <li>集团文化</li>
-                    <li>发展历史</li>
-                    <li>集团荣誉</li>
-                    <li>董事长致词</li>
+                    <li class="Liz-padding-top-10px"><a href="./groupIntro.html#culture">集团文化</a></li>
+                    <li><a href="./groupIntro.html#history">发展历史</a></li>
+                    <li><a href="./groupIntro.html#honor">集团荣誉</a></li>
+                    <li><a href="./groupIntro.html#chairman">董事长致词</a></li>
                 </ul>
 
                 <ul class="footList-brand Liz-flex-1">
-                    <li class="Liz-text-lg">集团文化</li>
+                    <li class="Liz-text-lg"><a href="./subbrand.html">旗下品牌</a></li>
                     <hr>
-                    <li>三彩 3COLOUR</li>
-                    <li>丽雪 Leisure</li>
-                    <li>伊布都 ibudu</li>
-                    <li>优露 ullu</li>
-                    <li>Aline de rose</li>
+                    <li class="Liz-padding-top-10px">三彩 3COLOUR</li>
+                    <li><a href="./subbrand.html">丽雪 Leisure</a></li>
+                    <li><a href="./subbrand.html">伊布都 ibudu</a></li>
+                    <li><a href="./subbrand.html">优露 ullu</a></li>
+                    <li><a href="./subbrand.html">Aline de rose</a></li>
                 </ul>
 
                 <ul class="footList Liz-flex-1">
-                    <li class="Liz-text-lg">新闻中心</li>
+                    <li class="Liz-text-lg"><a href="./news.html">新闻中心</a></li>
                     <hr>
-                    <li>集团新闻</li>
+                    <li class="Liz-padding-top-10px"><a href="./news.html">集团新闻</a></li>
                     <li>公益事业</li>
                     <li>员工关怀</li>
                 </ul>
 
                 <ul class="footList Liz-flex-1">
-                    <li class="Liz-text-lg">人才发展</li>
+                    <li class="Liz-text-lg"><a href="./development.html">人才发展</a></li>
                     <hr>
-                    <li>加入我们</li>
-                    <li>薪酬福利</li>
-                    <li>学习发展</li>
+                    <li class="Liz-padding-top-10px"><a href="./development.html">加入我们</a></li>
+                    <li><a href="./payment.html">薪酬福利</a></li>
+                    <li><a href="./learn.html">学习发展</a></li>
                 </ul>
 
             </div>
