--- a/src/groupIntro.html
+++ b/src/groupIntro.html
@@ -94,15 +94,15 @@
         <div class="section">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
-                    <img src="images\page1\group culture.png">
+                    <img src="images/page1/group culture.png">
                 </div>
             </div>
             <hr>
         </div>
         <div class="section Liz-flex">
             <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right Liz-flex-align-center" style="margin:20px 0;">
-                <div style="width: 580px;height:600px;overflow:auto;    " class="Liz-scroll">
-                    <pre>
+                <div style="width: 580px;height:600px;overflow:auto;" class="Liz-scroll">
+                    <pre style="line-height: 24px;">
 一、卓尚的核心价值观
 1.只听对的：不听大的
 对的是指：有利于更多数人，更长远利益的选择。
@@ -144,7 +144,7 @@ c)  快速学习，快速改进（核心是快速改进）
                 </div>
             </div>
             <div class="Liz-flex-1">
-                <img src="images\page1\content-pic1.png" style="height: 640px;width: 100%;">
+                <img src="images/page1/content-pic1.png" style="height: 640px;width: 100%;">
             </div>
             <hr>
         </div>
@@ -152,7 +152,7 @@ c)  快速学习，快速改进（核心是快速改进）
         <div id="history" class="section section1 opacity0">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
-                    <img src="images\page1\development history.png">
+                    <img src="images/page1/development history.png">
                 </div>
             </div>
             <hr>
@@ -181,7 +181,7 @@ c)  快速学习，快速改进（核心是快速改进）
         <div id="honor" class="section section2 opacity0">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
-                    <img src="images\page1\group honor.png">
+                    <img src="images/page1/group honor.png">
                 </div>
             </div>
         </div>
@@ -391,7 +391,7 @@ c)  快速学习，快速改进（核心是快速改进）
         <div id="chairman" class="section section3 opacity0">
             <div class="Liz-container Liz-padding-vertical-lg">
                 <div class="Liz-flex  Liz-flex-justify-center">
-                    <img src="images\page1\chairman.png">
+                    <img src="images/page1/chairman.png">
                 </div>
             </div>
             <hr>
@@ -418,7 +418,7 @@ c)  快速学习，快速改进（核心是快速改进）
                 <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 30px;height: 458px;margin: 20px 0;">
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active fade in" id="dream">
-                            <pre>
+                            <pre style="line-height: 24px;">
 服装道路，义无反顾
 作为一个没有服装行业工作经验的创业者，能从下岗工人一路走到现在，我始终心怀感恩感谢这一路给我帮助、与我同行的所有人。很多人问我，是什么力量支撑我一直坚持服装行业，其实，也有很多服装行业的人转行，我始终坚持并不是因为我的兴趣和爱好，而是因为责任，是因为需要。如果说只有相信自己会成功的人才会成功，那我愿意做一个自信的人，我不怕被同行打败，因为他们是拿兴趣玩儿，而我是在拿命玩儿。
 
