--- a/src/index.html
+++ b/src/index.html
@@ -65,19 +65,29 @@
             <div id="toggleHeads"  data-role="cyt-turnPage-3d">
                 <div class="box">
         			<div class="page page1">
-        			    <img class="imgScreen" src="./images/page7/logo-1.png" alt="" />
+                        <div class="imgScreen-scale">
+                            <img style="animation: none;" class="imgScreen" src="./images/page7/logo-1.png" alt="" />
+                        </div>
         			</div>
         			<div class="page page2">
-                        <img class="imgScreen" src="./images/page7/logo-2.png" alt="" />
+                        <div class="imgScreen-scale">
+                            <img class="imgScreen" src="./images/page7/logo-2.png" alt="" />
+                        </div>
         			</div>
         			<div class="page page3">
-                        <img class="imgScreen" src="./images/page7/logo-3.png" alt="" />
+                        <div class="imgScreen-scale">
+                            <img class="imgScreen" src="./images/page7/logo-3.png" alt="" />
+                        </div>
         			</div>
         			<div class="page page4">
-                        <img class="imgScreen" src="./images/page7/logo-4.png" alt="" />
+                        <div class="imgScreen-scale">
+                            <img class="imgScreen" src="./images/page7/logo-4.png" alt="" />
+                        </div>
         			</div>
         			<div class="page page5">
-                        <img class="imgScreen" src="./images/page7/logo-5.png" alt="" />
+                        <div class="imgScreen-scale">
+                            <img class="imgScreen" src="./images/page7/logo-5.png" alt="" />
+                        </div>
         			</div>
         		</div>
             </div>
