--- a/src/groupIntro.html
+++ b/src/groupIntro.html
@@ -92,7 +92,7 @@
         </div>
         <!--group culture  -->
         <div class="section">
-            <div class="Liz-container Liz-padding-vertical-lg">
+            <div class="Liz-container Liz-padding-vertical-35px">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images/page1/group culture.png">
                 </div>
@@ -146,11 +146,11 @@ c)  快速学习，快速改进（核心是快速改进）
             <div class="Liz-flex-1">
                 <img src="images/page1/content-pic1.png" style="height: 640px;width: 100%;">
             </div>
-            <hr>
         </div>
         <!-- development history -->
         <div id="history" class="section section1 opacity0">
-            <div class="Liz-container Liz-padding-vertical-lg">
+            <hr>
+            <div class="Liz-container Liz-padding-vertical-35px">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images/page1/development history.png">
                 </div>
@@ -179,7 +179,7 @@ c)  快速学习，快速改进（核心是快速改进）
         </div>
         <!-- group honor -->
         <div id="honor" class="section section2 opacity0">
-            <div class="Liz-container Liz-padding-vertical-lg">
+            <div class="Liz-container Liz-padding-vertical-35px">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images/page1/group honor.png">
                 </div>
@@ -389,7 +389,7 @@ c)  快速学习，快速改进（核心是快速改进）
         </div>
         <!-- chairman -->
         <div id="chairman" class="section section3 opacity0">
-            <div class="Liz-container Liz-padding-vertical-lg">
+            <div class="Liz-container Liz-padding-vertical-35px">
                 <div class="Liz-flex  Liz-flex-justify-center">
                     <img src="images/page1/chairman.png">
                 </div>
