--- a/src/groupIntro.html
+++ b/src/groupIntro.html
@@ -102,7 +102,7 @@
         <div class="section Liz-flex">
             <div class="Liz-flex-1 Liz-flex Liz-flex-justify-right Liz-flex-align-center" style="margin:20px 0;">
                 <div style="width: 580px;height:600px;overflow:auto;" class="Liz-scroll">
-                    <pre style="line-height: 24px;">
+                    <pre class="line-height-24">
 一、卓尚的核心价值观
 1.只听对的：不听大的
 对的是指：有利于更多数人，更长远利益的选择。
@@ -188,7 +188,7 @@ c)  快速学习，快速改进（核心是快速改进）
         <div class="section section2 Liz-bg-default opacity0">
             <div class="Liz-container Liz-flex">
                 <div id="slider">
-                    <ul style="left:-1200px">
+                    <ul style="left:-1200px;font-size: 14px;">
                         <li width="1200px" height="272px">
                             <table class="table Liz-margin-vertical-lg" >
                                 <tr>
@@ -415,7 +415,7 @@ c)  快速学习，快速改进（核心是快速改进）
                 </ul>
 
                 <hr>
-                <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 30px;height: 458px;margin: 20px 0;">
+                <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 40px;height: 458px;margin: 20px 0;">
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active fade in" id="dream">
                             <pre style="line-height: 24px;">
