--- a/src/payment.html
+++ b/src/payment.html
@@ -114,7 +114,7 @@
     <div class="section  Liz-padding-vertical-lg">
         <div class="Liz-container Liz-flex Liz-margin-vertical-lg">
             <div class="Liz-flex-1">
-                <pre>
+                <pre class="line-height-24">
 1、薪酬构成
 公司员工的全面薪酬由基本工资、津贴、绩效奖金和福利四部分组成。
 1.1 基本工资：体现了相应职位的价值以及该职位员工的能力水平。基本工资采用薪酬带宽制，同职级员工基本工资根据其不同职责、技能、知识水平及经验在工资区间中对应相应数值。
