--- a/src/learn.html
+++ b/src/learn.html
@@ -117,21 +117,21 @@
                             <img src="images/page5/group-people.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>卓尚化学习</h4>
-                                <p>卓尚文化、管理培生培养项目、新员工融入项目</p>
+                                <p class="line-height-24">卓尚文化、管理培生培养项目、新员工融入项目</p>
                             </div>
                         </div>
                         <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
                             <img src="images/page5/Battery.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>专业化学习</h4>
-                                <p>专业应知应会基础学堂、商品运营、终端零售、营销学堂、供应链、电子商务、研发设计、TOC系统</p>
+                                <pt class="line-height-24">专业应知应会基础学堂、商品运营、终端零售、营销学堂、供应链、电子商务、研发设计、TOC系统</p>
                             </div>
                         </div>
                         <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
                             <img src="images/page5/Suitcase.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>管理领导力提升</h4>
-                                <p>领导力发展项目、新晋管理者项目、关键人才发展项目</p>
+                                <p class="line-height-24">领导力发展项目、新晋管理者项目、关键人才发展项目</p>
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="Liz-flex-1  Liz-margin-vertical-lg">
-                <pre>
+                <pre class="line-height-24">
 践行梦想，与你同行
 前段时间我在企业文化中加了自己的最新感悟，就是“与奋斗者共享未来”，奋斗者的第一个标志就是有伟大梦想。大家都说“梦想还是要有的，万一实现了呢？”我并不认为只有实现梦想才算是成功，当别人的梦想是100分，而你的梦想是10000分，当你达到8000分然后失败了的时候，谁能说你没有成功呢？在活着的时候做了自己想做的事情，我认为这就是幸福。
 但从另一方面来讲，梦想如果只停留在脑海中那只能算空想，梦想需要落地、需要践行。在践行梦想的过程中，我们要不断地拓宽视野、不断地充实自己、不断地内向归因、反思自己。对于改变不了的事情，不抱怨、不埋怨，对于可以改变的事情，全心关注、全力以赴。付出总得需要时间来证明回报，而我们迈出的每一步都需要想明白三个问题——你拥有什么？你想得到什么？你愿意失去什么？
