--- a/src/development.html
+++ b/src/development.html
@@ -127,7 +127,7 @@
 <pre  class="Liz-text-white">首席设计师      Chief designer</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
-                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index"><img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage"></a>
+                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index" target＝"_blank"><img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage"></a>
                         </div>
                   </h4>
                 </div>
@@ -148,7 +148,7 @@
 <pre class="Liz-text-black">设计助理      Design assistant</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
-                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
+                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index" target＝"_blank"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
                         </div>
                       </h4>
                 </div>
@@ -169,7 +169,7 @@
 <pre class="Liz-text-black">拓展主管      Development director</pre>
                     </a>
                      <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
-                        <a href="http://www.hotjob.cn/wt/zhuoshang/web/index"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
+                        <a href="http://www.hotjob.cn/wt/zhuoshang/web/index" target＝"_blank"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
                     </div>
                   </h4>
                 </div>
