--- a/src/groupIntro.html
+++ b/src/groupIntro.html
@@ -418,7 +418,7 @@ c)  快速学习，快速改进（核心是快速改进）
                 <div class="text Liz-scroll" style="width: 600px;overflow:auto;padding:0 40px;height: 458px;margin: 20px 0;">
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane active fade in" id="dream">
-                            <pre style="line-height: 24px;">
+                            <pre class="line-height-24">
 服装道路，义无反顾
 作为一个没有服装行业工作经验的创业者，能从下岗工人一路走到现在，我始终心怀感恩感谢这一路给我帮助、与我同行的所有人。很多人问我，是什么力量支撑我一直坚持服装行业，其实，也有很多服装行业的人转行，我始终坚持并不是因为我的兴趣和爱好，而是因为责任，是因为需要。如果说只有相信自己会成功的人才会成功，那我愿意做一个自信的人，我不怕被同行打败，因为他们是拿兴趣玩儿，而我是在拿命玩儿。
 
