--- a/src/news.html
+++ b/src/news.html
@@ -95,13 +95,13 @@
                 <!-- Nav tabs -->
                 <ul class="tabs Liz-flex Liz-flex-justify-center" role="tablist">
                   <li role="presentation" class="active">
-                      <a href="#group" aria-controls="home" role="tab" data-toggle="pill">集团新闻</a>
+                      <a href="#group" role="tab" data-toggle="pill">集团新闻</a>
                   </li>
                   <li role="presentation">
-                      <a href="" aria-controls="profile" role="tab" data-toggle="pill">公益事业</a>
+                      <a href="./public.html" role="tab" data-toggle="pill">公益事业</a>
                   </li>
                   <li role="presentation">
-                      <a href="" aria-controls="settings" role="tab" data-toggle="pill">员工关怀</a>
+                      <a href="" role="tab" data-toggle="pill">员工关怀</a>
                   </li>
                 </ul>
             </div>
