--- a/src/learn.html
+++ b/src/learn.html
@@ -9,10 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
-    <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <script src="js/respond.min.js"></script>
-<![endif]-->
+        <!--[if lt IE 9]> <script src="js/html5shiv.js"></script> <script src="js/respond.min.js"></script> <![endif]-->
 </head>
 
 <body>
@@ -109,8 +106,8 @@
 
 <hr>
     <div class="section Liz-padding-vertical-lg">
-        <div class="Liz-container Liz-flex Liz-flex-column">
-            <div class="Liz-flex-1 Liz-flex  Liz-margin-vertical-lg">
+        <div class="Liz-container Liz-flex Liz-flex-column" style="height:620px;">
+            <div class="Liz-flex-1 Liz-flex  Liz-margin-vertical-lg" style="height:276px">
                 <div class="Liz-flex-1 Liz-flex">
                     <div class="Liz-flex-1 Liz-flex Liz-flex-column">
                         <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
@@ -124,7 +121,7 @@
                             <img src="images/page5/Battery.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>专业化学习</h4>
-                                <pt class="line-height-24">专业应知应会基础学堂、商品运营、终端零售、营销学堂、供应链、电子商务、研发设计、TOC系统</p>
+                                <p class="line-height-24">专业应知应会基础学堂、商品运营、终端零售、营销学堂、供应链、电子商务、研发设计、TOC系统</p>
                             </div>
                         </div>
                         <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
@@ -148,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Liz-flex-1  Liz-margin-vertical-lg">
+            <div class="Liz-flex-1  Liz-margin-vertical-lg" style="height:216px;">
                 <pre class="line-height-24">
 践行梦想，与你同行
 前段时间我在企业文化中加了自己的最新感悟，就是“与奋斗者共享未来”，奋斗者的第一个标志就是有伟大梦想。大家都说“梦想还是要有的，万一实现了呢？”我并不认为只有实现梦想才算是成功，当别人的梦想是100分，而你的梦想是10000分，当你达到8000分然后失败了的时候，谁能说你没有成功呢？在活着的时候做了自己想做的事情，我认为这就是幸福。
