--- a/src/subbrand.html
+++ b/src/subbrand.html
@@ -63,100 +63,141 @@
         </div>
 <!-- 品牌 -->
         <div class="section brandBg verticalCenter">
-            <ul class="section Liz-flex footerLogList brandListBg Center">
-                <li class="Liz-flex-1 Liz-border-right Liz-text-center">
+            <ul class="section Liz-flex brandListBg Center text-center">
+                <li class="Liz-flex-1 brandIpc brandIpc1 Liz-text-center">
                     <img src="images/page1/logo1.png" alt="">
                 </li>
-                <li class="Liz-flex-1 Liz-border-right Liz-text-center">
+                <li class="rect"></li>
+                <li class="Liz-flex-1 brandIpc brandIpc2 Liz-text-center">
                     <img src="images/page1/logo2.png" alt="">
                 </li>
-                <li class="Liz-flex-1 Liz-text-center">
+                <li class="rect"></li>
+                <li class="Liz-flex-1 brandIpc brandIpc3 Liz-text-center">
                     <img src="images/page1/logo3.png" alt="">
                 </li>
-                <li class="Liz-flex-1 Liz-border-horizontal Liz-text-center">
+                <li class="rect"></li>
+                <li class="Liz-flex-1 brandIpc brandIpc4 Liz-text-center">
                     <img src="images/page1/logo4.png" alt="">
                 </li>
-                <li class="Liz-flex-1 Liz-text-center">
+                <li class="rect"></li>
+                <li class="Liz-flex-1 brandIpc brandIpc5 Liz-text-center">
                     <img src="images/page1/logo5.png" alt="">
                 </li>
             </ul>
-            <div class="brandImgList Liz-flex">
-               <div class="Liz-flex-1 brandImgBox"><img class="brandPic" src="images/page3/brand1.png" alt="">
+
+
+
+            <div class="brandImgList Liz-flex" style="height:100%">
+               <div class="Liz-flex-1 brandImgBox Brandbg1">
                 <ul class="icoList">
                     <li class="text-right"><a href="./index.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
-                    <div class="weixinIco2 Liz-none"></div><a href="#">
-                        <img src="images/page3/weixin.png" alt="">
-                    </a></li>
-                    <li class="text-left"><a href="www.tianmao.com">
-                        <img src="images/page3/tianmao.png" alt="">
-                    </a></li>
+                        <div class="weixinIco2 Liz-none"></div>
+                        <a href="#">
+                            <img src="images/page3/weixin.png" alt="">
+                        </a>
+                    </li>
+                    <li class="text-left tianmaoIco">
+                        <div class="tianmaoIco2 Liz-none"></div>
+                        <a href="www.tianmao.com">
+                            <img src="images/page3/tianmao.png" alt="">
+                        </a>
+                    </li>
                 </ul>
                </div>
-               <div class="Liz-flex-1 brandImgBox"><img class="brandPic" src="images/page3/brand2.png" alt="">
+               <div class="Liz-flex-1 brandImgBox Brandbg2">
                 <ul class="icoList">
                     <li class="text-right"><a href="./index.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
-                    <div class="weixinIco2 Liz-none"></div><a href="#">
-                        <img src="images/page3/weixin.png" alt="">
-                    </a></li>
-                    <li class="text-left"><a href="www.tianmao.com">
-                        <img src="images/page3/tianmao.png" alt="">
-                    </a></li>
+                        <div class="weixinIco2 Liz-none"></div>
+                        <a href="#">
+                            <img src="images/page3/weixin.png" alt="">
+                        </a>
+                    </li>
+                    <li class="text-left tianmaoIco">
+                        <div class="tianmaoIco2 Liz-none"></div>
+                        <a href="www.tianmao.com">
+                            <img src="images/page3/tianmao.png" alt="">
+                        </a>
+                    </li>
                 </ul>
                </div>
-               <div class="Liz-flex-1 brandImgBox"><img class="brandPic" src="images/page3/brand3.png" alt="">
+               <div class="Liz-flex-1 brandImgBox Brandbg3">
                 <ul class="icoList">
                     <li class="text-right"><a href="./index.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
-                    <div class="weixinIco2 Liz-none"></div><a href="#">
-                        <img src="images/page3/weixin.png" alt="">
-                    </a></li>
-                    <li class="text-left"><a href="www.tianmao.com">
-                        <img src="images/page3/tianmao.png" alt="">
-                    </a></li>
+                        <div class="weixinIco2 Liz-none"></div>
+                        <a href="#">
+                            <img src="images/page3/weixin.png" alt="">
+                        </a>
+                    </li>
+                    <li class="text-left tianmaoIco">
+                        <div class="tianmaoIco2 Liz-none"></div>
+                        <a href="www.tianmao.com">
+                            <img src="images/page3/tianmao.png" alt="">
+                        </a>
+                    </li>
                 </ul>
                </div>
-               <div class="Liz-flex-1 brandImgBox"><img class="brandPic" src="images/page3/brand4.png" alt="">
+               <div class="Liz-flex-1 brandImgBox Brandbg4">
                 <ul class="icoList">
                     <li class="text-right"><a href="./index.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
-                    <div class="weixinIco2 Liz-none"></div><a href="#">
-                        <img src="images/page3/weixin.png" alt="">
-                    </a></li>
-                    <li class="text-left"><a href="www.tianmao.com">
-                        <img src="images/page3/tianmao.png" alt="">
-                    </a></li>
+                        <div class="weixinIco2 Liz-none"></div>
+                        <a href="#">
+                            <img src="images/page3/weixin.png" alt="">
+                        </a>
+                    </li>
+                    <li class="text-left tianmaoIco">
+                        <div class="tianmaoIco2 Liz-none"></div>
+                        <a href="www.tianmao.com">
+                            <img src="images/page3/tianmao.png" alt="">
+                        </a>
+                    </li>
                 </ul>
                </div>
-               <div class="Liz-flex-1 brandImgBox"><img class="brandPic" src="images/page3/brand5.png" alt="">
+               <div class="Liz-flex-1 brandImgBox Brandbg5">
                 <ul class="icoList">
                     <li class="text-right"><a href="./index.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
-                    <div class="weixinIco2 Liz-none"></div><a href="#">
-                        <img src="images/page3/weixin.png" alt="">
-                    </a></li>
-                    <li class="text-left"><a href="www.tianmao.com">
-                        <img src="images/page3/tianmao.png" alt="">
-                    </a></li>
+                        <div class="weixinIco2 Liz-none"></div>
+                        <a href="#">
+                            <img src="images/page3/weixin.png" alt="">
+                        </a>
+                    </li>
+                    <li class="text-left tianmaoIco">
+                        <div class="tianmaoIco2 Liz-none"></div>
+                        <a href="www.tianmao.com">
+                            <img src="images/page3/tianmao.png" alt="">
+                        </a>
+                    </li>
                 </ul>
                </div>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
 <!-- footor -->
         <div class="Liz-border-vertical">
-            <div class="section Liz-border-vertical Liz-bg-default">
-                <div class="Liz-container Liz-margin-vertical-lg">
+            <div class="section Liz-border-vertical">
+                <div class="section Liz-relative Liz-bg-default" style="padding-top:32px;padding-bottom:32px;">
                     <div class="Liz-flex  Liz-flex-justify-center">
                         <img id="go-header" class="go-header" src="./images/page1/top.png">
                     </div>
