--- a/src/groupIntro.html
+++ b/src/groupIntro.html
@@ -187,181 +187,176 @@
                         <li width="1200px" height="272px">
                             <table class="table Liz-margin-vertical-lg" >
                                 <tr>
-                                    <th>2015</th>
-                                    <td>“三彩”被评为浙江省著名商标</td>
+                                    <th>2014年</th>
+                                    <td>中国服装协会第六理事会理事单位 
+                                </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>中国服装协会第六理事会理事单位</td>
+                                    <th> </th>
+                                    <td>杭州市著名商标 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市著名商标</td>
+                                    <th> </th>
+                                    <td>新下沙人文化家园 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>新下沙人文化家园</td>
+                                    <th> </th>
+                                    <td>绿叶奖 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>绿叶奖</td>
-                                </tr>
-                                <tr>
-                                    <th>2014</th>
+                                    <th> </th>
                                     <td>杭州市高新技术企业</td>
                                 </tr>
                                 <tr>
-                                    <th>2013</th>
-                                    <td>ibudu 2012年度十大女装品牌</td>
+                                    <th>2015年</th>
+                                    <td> “三彩”被评为浙江省著名商标 </td>
                                 </tr>
                                 <tr>
-                                    <th>2012</th>
-                                    <td>供应链联盟战略合作伙伴</td>
+                                    <th> </th>
+                                    <td>    </td>
+                                </tr>
+                                <tr>
+                                    <th> </th>
+                                    <td> </td>
                                 </tr>
                             </table>
                         </li>
                         <li width="1200px" height="272px">
                             <table class="table Liz-margin-vertical-lg" >
                                 <tr>
-                                    <th>2015</th>
-                                    <td>“三彩”被评为浙江省著名商标</td>
+                                    <th>2000年</th>
+                                    <td>中国社会调查所“中国名牌”国际服装博览会 “双十佳”</td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>中国服装协会第六理事会理事单位</td>
+                                    <th>2001年</th>
+                                    <td>省新世纪质量服务双优企业</td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市著名商标</td>
+                                    <th> </th>
+                                    <td>省级名牌服饰公司 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>新下沙人文化家园</td>
+                                    <th> </th>
+                                    <td>省新世纪质量服务双优企业"</td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>绿叶奖</td>
+                                    <th>2005年</th>
+                                    <td>浙江省服装行业协会理事单位</td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市高新技术企业</td>
+                                    <th>2008年</th>
+                                    <td>省残疾人福利基金会“爱心奖”</td>
                                 </tr>
                                 <tr>
-                                    <th>2013</th>
-                                    <td>ibudu 2012年度十大女装品牌</td>
+                                    <th>2009年</th>
+                                    <td>社会责任建设先进企业</td>
                                 </tr>
                                 <tr>
-                                    <th>2012</th>
-                                    <td>供应链联盟战略合作伙伴</td>
+                                    <th> </th>
+                                    <td>浙江省服装行业理事单位 </td>
                                 </tr>
                             </table>
                         </li>
                         <li width="1200px" height="272px">
                             <table class="table Liz-margin-vertical-lg" >
                                 <tr>
-                                    <th>2015</th>
-                                    <td>“三彩”被评为浙江省著名商标</td>
+                                    <th>2009年</th>
+                                    <td>A级信用登记单位 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>中国服装协会第六理事会理事单位</td>
+                                    <th> </th>
+                                    <td>社会责任建设先进企业 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市著名商标</td>
+                                    <th> </th>
+                                    <td>共青团“青年就业见习基地” </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>新下沙人文化家园</td>
+                                    <th>2010年</th>
+                                    <td>标准化工作“特殊贡献奖”</td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>绿叶奖</td>
+                                    <th>2011年</th>
+                                    <td>能力验证合格实验室证书 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市高新技术企业</td>
+                                    <th> </th>
+                                    <td>能力验证结果证书</td>
                                 </tr>
                                 <tr>
-                                    <th>2013</th>
-                                    <td>ibudu 2012年度十大女装品牌</td>
+                                    <th> </th>
+                                    <td>标准化工作先进单位 </td>
                                 </tr>
                                 <tr>
-                                    <th>2012</th>
-                                    <td>供应链联盟战略合作伙伴</td>
+                                    <th> </th>
+                                    <td>“石川奖”和“健峰奖” </td>
                                 </tr>
                             </table>
                         </li>
                         <li width="1200px" height="272px">
                             <table class="table Liz-margin-vertical-lg" >
                                 <tr>
-                                    <th>2015</th>
-                                    <td>“三彩”被评为浙江省著名商标</td>
+                                    <th>2011年</th>
+                                    <td>优秀职工之友</td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>中国服装协会第六理事会理事单位</td>
+                                    <th> </th>
+                                    <td>爱心助残 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市著名商标</td>
+                                    <th> </th>
+                                    <td>先进党组织 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>新下沙人文化家园</td>
+                                    <th>2012年</th>
+                                    <td>供应链联盟战略合作伙伴 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>绿叶奖</td>
+                                    <th> </th>
+                                    <td>先进工会 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市高新技术企业</td>
+                                    <th> </th>
+                                    <td>职工运动会“优秀组织奖” </td>
                                 </tr>
                                 <tr>
-                                    <th>2013</th>
+                                    <th> </th>
+                                    <td>国际商会“先进会员单位 </td>
+                                </tr>
+                                <tr>
+                                    <th>2013年</th>
                                     <td>ibudu 2012年度十大女装品牌</td>
-                                </tr>
-                                <tr>
-                                    <th>2012</th>
-                                    <td>供应链联盟战略合作伙伴</td>
                                 </tr>
                             </table>
                         </li>
                         <li width="1200px" height="272px">
                             <table class="table Liz-margin-vertical-lg" >
                                 <tr>
-                                    <th>2015</th>
-                                    <td>“三彩”被评为浙江省著名商标</td>
+                                    <th>2014年</th>
+                                    <td>中国服装协会第六理事会理事单位 
+                                </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>中国服装协会第六理事会理事单位</td>
+                                    <th> </th>
+                                    <td>杭州市著名商标 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>杭州市著名商标</td>
+                                    <th> </th>
+                                    <td>新下沙人文化家园 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>新下沙人文化家园</td>
+                                    <th> </th>
+                                    <td>绿叶奖 </td>
                                 </tr>
                                 <tr>
-                                    <th>2014</th>
-                                    <td>绿叶奖</td>
-                                </tr>
-                                <tr>
-                                    <th>2014</th>
+                                    <th> </th>
                                     <td>杭州市高新技术企业</td>
                                 </tr>
                                 <tr>
-                                    <th>2013</th>
-                                    <td>ibudu 2012年度十大女装品牌</td>
+                                    <th>2015年</th>
+                                    <td> “三彩”被评为浙江省著名商标 </td>
                                 </tr>
-                                <tr>
-                                    <th>2012</th>
-                                    <td>供应链联盟战略合作伙伴</td>
-                                </tr>
+                                
                             </table>
                         </li>
                     </ul>
@@ -369,6 +364,7 @@
                         <span index="1" class="on"></span>
                         <span index="2"></span>
                         <span index="3"></span>
+                        <span index="4"></span>
                     </div>
                 </div>
                 <div  id="arrow_r" class="navigation-prev">
