fix subbrand navbar

--- a/src/development.html
+++ b/src/development.html
@@ -51,7 +51,7 @@
                         <a href="./development.html">人才发展</a>
                     </li>
                     <li class="Liz-flex-1">
-                        <a href="./webstore.html">网上商城</a>
+                        <a href="./subbrand.html">网上商城</a>
                     </li>
                 </ul>
             </div>
