--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                             <a href="./development.html">人才发展</a>
                         </li>
                         <li class="Liz-flex-1">
-                            <a href="./webstore.html">网上商城</a>
+                            <a href="./subbrand.html">网上商城</a>
                         </li>
                     </ul>
                 </div>
@@ -86,7 +86,7 @@
                 <a class="nav" href="./subbrand.html">旗下品牌</a>
                 <a class="nav" href="./news.html">新闻中心</a>
                 <a class="nav" href="./development.html">人才发展</a>
-                <a class="nav" href="./payment.html">网上商城</a>
+                <a class="nav" href="./subbrand.html">网上商城</a>
             </div>
         </div>
 
