--- a/src/subbrand.html
+++ b/src/subbrand.html
@@ -16,7 +16,7 @@
 <!-- Header -->
         <div class="header" id="header">
             <!-- 菜单栏 -->
-            <div class="Liz-navbar headroom headroom--unpinned" id="Liz-navbar">
+            <div class="Liz-navbar headroom headroom--not-top" id="Liz-navbar">
                 <div class="Liz-flex Liz-flex-align-center">
                     <div class="Liz-flex-1">
                         <a href="./index.html"><img src="images/page1/logo.png"></a>
@@ -49,16 +49,12 @@
                             <a href="./development.html">人才发展</a>
                         </li>
                         <li class="Liz-flex-1">
-                            <a href="./webstore.html">网上商城</a>
+                            <a href="./subbrand.html">网上商城</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="navicon">
-                <a class="nav-toggle" href="#" id="nav-toggle">
-                    <span></span>
-                </a>
-            </div>
+
             <div class="overlayer active"></div>
         </div>
 <!-- 品牌 -->
