--- a/src/learn.html
+++ b/src/learn.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>学习发展</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
         <!--[if lt IE 9]> <script src="js/html5shiv.js"></script> <script src="js/respond.min.js"></script> <![endif]-->
@@ -106,25 +105,25 @@
 
 <hr>
     <div class="section Liz-padding-vertical-lg">
-        <div class="Liz-container Liz-flex Liz-flex-column" style="height:620px;">
-            <div class="Liz-flex-1 Liz-flex  Liz-margin-vertical-lg" style="height:276px">
+        <div class="Liz-container">
+            <div class="Liz-flex-1 Liz-flex  Liz-margin-vertical-lg">
                 <div class="Liz-flex-1 Liz-flex">
-                    <div class="Liz-flex-1 Liz-flex Liz-flex-column">
-                        <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
+                    <div class="Liz-flex-1">
+                        <div class="Liz-flex Liz-flex-align-center ">
                             <img src="images/page5/group-people.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>卓尚化学习</h4>
                                 <p class="line-height-24">卓尚文化、管理培生培养项目、新员工融入项目</p>
                             </div>
                         </div>
-                        <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
+                        <div class="Liz-flex Liz-flex-align-center ">
                             <img src="images/page5/Battery.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>专业化学习</h4>
                                 <p class="line-height-24">专业应知应会基础学堂、商品运营、终端零售、营销学堂、供应链、电子商务、研发设计、TOC系统</p>
                             </div>
                         </div>
-                        <div class="Liz-flex-1 Liz-flex Liz-flex-align-center ">
+                        <div class="Liz-flex Liz-flex-align-center ">
                             <img src="images/page5/Suitcase.png" alt="">
                             <div class="Liz-flex-1">
                                 <h4>管理领导力提升</h4>
@@ -145,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="Liz-flex-1  Liz-margin-vertical-lg" style="height:216px;">
+            <div class="Liz-flex-1  Liz-margin-vertical-lg" style="display: inline-block; width: 100%">
                 <pre class="line-height-24">
 践行梦想，与你同行
 前段时间我在企业文化中加了自己的最新感悟，就是“与奋斗者共享未来”，奋斗者的第一个标志就是有伟大梦想。大家都说“梦想还是要有的，万一实现了呢？”我并不认为只有实现梦想才算是成功，当别人的梦想是100分，而你的梦想是10000分，当你达到8000分然后失败了的时候，谁能说你没有成功呢？在活着的时候做了自己想做的事情，我认为这就是幸福。
