--- a/src/newsDetail.html
+++ b/src/newsDetail.html
@@ -5,7 +5,6 @@
     <title>卓尚服饰</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
@@ -134,8 +133,8 @@
                       <div class="clearfix Liz-margin-vertical-xlg">
                           <div class="pull-left">
                               <a href="#" class="link" style="margin-right: 5px">BACK</a>
-                              <a href="#" class="link" style="margin-right: 2px"><</a>
-                              <a href="#" class="link">></a>
+                              <a href="#" class="link" style="margin-right: 2px">&lt;</a>
+                              <a href="#" class="link">&gt;</a>
                               <span class="Liz-margin-left-30px">NEXT:邂逅三彩——三彩新形象凤起店华丽启幕</span>
                           </div>
 
