--- a/src/public.html
+++ b/src/public.html
@@ -82,7 +82,7 @@
             <div class="Liz-container">
                 <ol class="breadcrumb2">
                   <li><a href="./index.html">HOME</a></li>
-                  <li><a href="#">新闻中心</a></li>
+                  <li><a href="./news.html">新闻中心</a></li>
                   <li class="active">公益事业</li>
                 </ol>
             </div>
