--- a/src/development.html
+++ b/src/development.html
@@ -117,6 +117,8 @@
             <div class="Liz-flex-1"></div>
         </div>
     </div>
+
+
     <div class="section Liz-margin-bottom-50px">
         <div class="panel-group Liz-margin-bottom-0" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
@@ -126,7 +128,9 @@
 <pre  class="Liz-text-white">首席设计师      Chief designer</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
-                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index" target＝"_blank"><img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage"></a>
+                            <a target="_blank" href="http://www.hotjob.cn/wt/zhuoshang/web/index">
+                                <img src="images/page4/massage1.png" alt="" class="Liz-fr Liz-massage" />
+                            </a>
                         </div>
                   </h4>
                 </div>
@@ -140,6 +144,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingTwo">
                     <h4 class="panel-title Liz-container Liz-flex">
@@ -147,7 +152,9 @@
 <pre class="Liz-text-black">设计助理      Design assistant</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
-                            <a href="http://www.hotjob.cn/wt/zhuoshang/web/index" target＝"_blank"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
+                            <a target="_blank" href="http://www.hotjob.cn/wt/zhuoshang/web/index">
+                                <img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage" />
+                            </a>
                         </div>
                       </h4>
                 </div>
@@ -161,6 +168,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingThree">
                     <h4 class="panel-title Liz-container  Liz-flex">
@@ -168,7 +176,9 @@
 <pre class="Liz-text-black">拓展主管      Development director</pre>
                     </a>
                      <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
-                        <a href="http://www.hotjob.cn/wt/zhuoshang/web/index" target＝"_blank"><img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage"></a>
+                        <a target="_blank" href="http://www.hotjob.cn/wt/zhuoshang/web/index">
+                            <img src="images/page4/massage2.png" alt="" class="Liz-fr Liz-massage" />
+                        </a>
                     </div>
                   </h4>
                 </div>
