update header for ie

--- a/src/subbrand.html
+++ b/src/subbrand.html
@@ -18,7 +18,7 @@
             <div class="Liz-navbar headroom headroom--not-top" id="Liz-navbar">
                 <div class="Liz-flex Liz-flex-align-center">
                     <div class="Liz-flex-1">
-                        <a href="./index.html"><img src="images/page1/logo.png"></a>
+                        <a href="./main.html"><img src="images/page1/logo.png"></a>
                     </div>
                     <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                         <li class="active dropdown Liz-flex-1">
@@ -85,7 +85,7 @@
             <div class="brandImgList Liz-flex" style="height:100%">
                <div class="Liz-flex-1 brandImgBox Brandbg1">
                 <ul class="icoList">
-                    <li class="text-right"><a href="./index.html">
+                    <li class="text-right"><a href="./main.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
@@ -104,7 +104,7 @@
                </div>
                <div class="Liz-flex-1 brandImgBox Brandbg2">
                 <ul class="icoList">
-                    <li class="text-right"><a href="./index.html">
+                    <li class="text-right"><a href="./main.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
@@ -123,7 +123,7 @@
                </div>
                <div class="Liz-flex-1 brandImgBox Brandbg3">
                 <ul class="icoList">
-                    <li class="text-right"><a href="./index.html">
+                    <li class="text-right"><a href="./main.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
@@ -142,7 +142,7 @@
                </div>
                <div class="Liz-flex-1 brandImgBox Brandbg4">
                 <ul class="icoList">
-                    <li class="text-right"><a href="./index.html">
+                    <li class="text-right"><a href="./main.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
@@ -161,7 +161,7 @@
                </div>
                <div class="Liz-flex-1 brandImgBox Brandbg5">
                 <ul class="icoList">
-                    <li class="text-right"><a href="./index.html">
+                    <li class="text-right"><a href="./main.html">
                         <img src="images/page3/home.png" alt="">
                     </a></li>
                     <li class="text-center weixinIco">
