--- a/src/learn.html
+++ b/src/learn.html
@@ -17,7 +17,7 @@
         <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
             <div class="Liz-flex Liz-flex-align-center">
                 <div class="Liz-flex-1">
-                     <a href="./index.html"><img src="images/page1/logo.png"></a>
+                     <a href="./main.html"><img src="images/page1/logo.png"></a>
                 </div>
                 <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
                     <li class="active dropdown Liz-flex-1">
@@ -78,7 +78,7 @@
     <div class="section">
         <div class="Liz-container">
             <ol class="breadcrumb2">
-              <li><a href="./index.html">HOME</a></li>
+              <li><a href="./main.html">HOME</a></li>
               <li><a href="#">人才发展</a></li>
               <li class="active">学习发展</li>
             </ol>
