--- a/src/main.html
+++ b/src/main.html
@@ -1,55 +1,238 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>index</title>
-    <link href="css/owl.carousel.css" rel="stylesheet">
-    <link href="css/owl.theme.css" rel="stylesheet">
-</head>
-
-
-<body>
-    <div class="Liz-flex Liz-main-container Liz-flex-column Liz-flex-align-between">
-        <div class="Liz-img Liz-img1"></div>
-        <div class="Liz-img Liz-img2"></div>
-        <div class="Liz-img Liz-img3"></div>
-    </div>
-    <div class="Liz-main-container Liz-screen">
-        <div class="Liz-flex Liz-flex-align-center Liz-flex-column Liz-flex-justify-center"
-        style="position: absolute; top: 50%;left:0; width: 100%; bottom: 0;margin-top: -50px;">
-            <div>
-                <div>
-                    <img src="images/page2/logo1.png" alt="" class="logAnim-toRight">
-                    <img src="images/page2/logo2.png" alt="" class="logAnim-toBotton">
-                    <img src="images/page2/logo3.png" alt="" class="logAnim-toLeftTop">
-                    <img src="images/page2/logo4.png" alt="" class="logAnim-toLeftBotton">
-                    <img src="images/page2/logo5.png" alt="" class="logAnim-toRightBotton">
-                </div>
-                <div>
-                    <img src="images/page2/logo6.png" alt="" class="logAnim-toTop">
-                    <img src="images/page2/logo7.png" alt="" class="logAnim-toBotton">
-                </div>
-            </div>
-            <div class="Liz-flex-1 logList Liz-flex Liz-flex-align-center Liz-flex-justify-center">
-                <div class="arr-left">
-                	<img src="images/page2/left.png" alt="">
-                </div>
-                <div style="width: 159px;">
-                    <ul id="carousel-wrap" class="text-center">
-                        <a href="#" class="logImg"><img src="images/page2/logo-1.png" alt=""></a>
-                        <a href="#" class="logImg"><img src="images/page2/logo-2.png" alt=""></a>
-                        <a href="#" class="logImg"><img src="images/page2/logo-3.png" alt=""></a>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>卓尚服饰</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <!-- Core CSS -->
+        <link href="css/owl.carousel.css" rel="stylesheet">
+        <link href="css/owl.theme.css" rel="stylesheet">
+        <!-- <% for (var css in htmlWebpackPlugin.files.css) { %>
+        <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+        <% } %> -->
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+        <!--[if lt IE 9]> <script src="js/html5shiv.js"></script> <script src="js/respond.min.js"></script> <![endif]-->
+    </head>
+    <body>
+        <!-- Header -->
+        <div id="header" class="header">
+            <!-- 菜单栏 -->
+            <div id="Liz-navbar" class="Liz-navbar headroom headroom--unpinned">
+                <div class="Liz-flex Liz-flex-align-center">
+                    <div class="Liz-flex-1">
+                         <a href="./main.html"><img src="images/page1/logo.png"></a>
+                    </div>
+                    <ul class="Liz-flex Liz-flex-1 Liz-header-nav">
+                        <li class="active dropdown Liz-flex-1">
+                            <a aria-expanded="false" aria-haspopup="true" class=" dropdown-toggle" data-toggle="dropdown" id="dropdownMenu1">关于卓尚</a>
+                            <ul aria-labelledby="dropdownMenu1" class="dropdown-menu">
+                                <li>
+                                    <a href="./groupIntro.html#culture">集团文化</a>
+                                </li>
+                                <li>
+                                    <a href="./groupIntro.html#history">发展历史</a>
+                                </li>
+                                <li>
+                                    <a href="./groupIntro.html#honor">集团荣誉</a>
+                                </li>
+                                <li>
+                                    <a href="./groupIntro.html#chairman">董事长致词</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="Liz-flex-1">
+                            <a href="./subbrand.html">旗下品牌</a>
+                        </li>
+                        <li class="Liz-flex-1">
+                            <a href="./news.html">新闻中心</a>
+                        </li>
+                        <li class="Liz-flex-1">
+                            <a href="./development.html">人才发展</a>
+                        </li>
+                        <li class="Liz-flex-1">
+                            <a href="./subbrand.html">网上商城</a>
+                        </li>
                     </ul>
                 </div>
-                <div class="arr-right">
-                	<img src="images/page2/right.png" alt="">
-                </div>
+            </div>
+            <div class="navicon">
+                <a id="nav-toggle" href="#" class="nav-toggle">
+                    <span></span>
+                </a>
+            </div>
+            <div class="overlayer active"></div>
+            <div id="toggleHeads"  data-role="cyt-turnPage-3d">
+                <div class="box">
+        			<div class="page page1">
+                        <img style="animation: none;" class="imgScreen" src="./images/page7/logo-1.png" alt="" />
+        			</div>
+        			<div class="page page2">
+                        <img class="imgScreen" src="./images/page7/logo-2.png" alt="" />
+        			</div>
+        			<div class="page page3">
+                        <img class="imgScreen" src="./images/page7/logo-3.png" alt="" />
+        			</div>
+        			<div class="page page4">
+                        <img class="imgScreen" src="./images/page7/logo-4.png" alt="" />
+        			</div>
+        			<div class="page page5">
+                        <img class="imgScreen" src="./images/page7/logo-5.png" alt="" />
+        			</div>
+        		</div>
+            </div>
+            <div class="navs">
+                <a class="nav" href="./groupIntro.html">关于卓尚</a>
+                <a class="nav" href="./subbrand.html">旗下品牌</a>
+                <a class="nav" href="./news.html">新闻中心</a>
+                <a class="nav" href="./development.html">人才发展</a>
+                <a class="nav" href="./subbrand.html">网上商城</a>
             </div>
         </div>
-    </div>
-</body>
 
+        <div class="animation-slide-up">
+            <!-- NEW & EVENTS -->
+            <div class="section Liz-border-bottom opacity0" id="section1">
+                <div class="Liz-container Liz-margin-vertical-lg">
+                    <div class="Liz-flex  Liz-flex-justify-center">
+                        <img src="images/page7/newevents.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- 首页滚动栏 -->
+            <div class="opacity0" id="section2">
+                <div class="Liz-container Liz-margin-vertical-lg">
+                    <div class="navigation-prev">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="navigation-next">
+                        <span></span>
+                        <span></span>
+                    </div>
+
+                    <div id="carousel-wrap">
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new1.png')">
+                                <div class="time"> 11.20 </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
+                                <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
+                            </div>
+                        </div>
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new2.png')">
+                                <div class="time"> 11.20 </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
+                                <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
+                            </div>
+                        </div>
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new3.png')">
+                                <div class="time"> 11.20 </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
+                                <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
+                            </div>
+                        </div>
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new4.png')">
+                                <div class="time"> 11.20 </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
+                                <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
+                            </div>
+                        </div>
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new1.png')">
+                                <div class="time"> 11.20 </div>
+                            </div>
+                            <div class="card card-block">
+                                <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
+                                <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <button class="btn more-btn">MORE</button>
+                </div>
+            </div>
+            <!-- INFORMATION -->
+            <div class="opacity0 section Liz-border-vertical" id="section3">
+                <div class="Liz-container Liz-margin-vertical-lg">
+                    <div class="Liz-flex  Liz-flex-justify-center">
+                        <img src="images/page7/informantion.png">
+                    </div>
+                </div>
+            </div>
+            <div class="opacity0" id="section4">
+                <div class="row Liz-container">
+                    <div class="col-xs-3 Liz-padding-0">
+                        <div class="card">
+                            <div class="card-img2" style="background-image: url('./images/page7/info1.png')">
+                                <div class="text">
+                                    GROUP CULTURE
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">集团文化</h3>
+                                <p>公司前进的每一步，无论是一大步还是一小步，都要带动行业发展的脚步。</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 Liz-padding-0">
+                        <div class="card">
+                            <div class="card-img2" style="background-image: url('./images/page7/info2.png')">
+                                <div class="text">
+                                    PUBLIC BENEFIT
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">公益事业</h3>
+                                <p>爱心助学 矢志不渝</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 Liz-padding-0">
+                        <div class="card">
+                            <div class="card-img2" style="background-image: url('./images/page7/info3.png')">
+                                <div class="text">
+                                    TALENT DEVELOPMENT
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">人才发展</h3>
+                                <p>人的命运不仅在于他的能力，更在于他是否能善待身边的每一个人</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 Liz-padding-0">
+                        <div class="card">
+                            <div class="card-img2" style="background-image: url('./images/page7/info4.png')">
+                                <div class="text">
+                                    SHOP
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <h3 class="card-title">商城</h3>
+                                <p>我深谙【女为悦己而容】的姿态，坚持自我主张的同时，我也要赢得众人的认可。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        <div class="Liz-border-vertical opacity0" id="footer"></div>
+        </div>
+
+        <!-- <script src="./assets/vendor.bundle.js"></script>
+        <script src="./assets/index.bundle.js"></script> -->
+    </body>
 </html>
