--- a/src/tpl/footer.html
+++ b/src/tpl/footer.html
@@ -45,7 +45,7 @@
                 <ul class="footList-brand Liz-flex-1">
                     <li class="Liz-text-lg"><a href="./subbrand.html">旗下品牌</a></li>
                     <hr>
-                    <li class="Liz-padding-top-10px">三彩 3COLOUR</li>
+                    <li class="Liz-padding-top-10px"><a href="./subbrand.html">三彩 3COLOUR</a></li>
                     <li><a href="./subbrand.html">丽雪 Leisure</a></li>
                     <li><a href="./subbrand.html">伊布都 ibudu</a></li>
                     <li><a href="./subbrand.html">优露 ullu</a></li>
