--- a/src/development.html
+++ b/src/development.html
@@ -72,13 +72,12 @@
     <hr>
     <div class="section Liz-padding-vertical-lg">
         <div class="Liz-container Liz-flex Liz-margin-vertical-lg">
-            <div class="Liz-flex-1">
+            <div style="padding-left: 26%;">
                 <pre class="line-height-24">
 使命：公司前进的每一步，无论是一大步还是一小步，都要带动行业发展的脚步
 愿景：成为对国家、对社会、有价值、有贡献、负责任的企业
 目标：成为对国家、对社会、有价值、</pre>
             </div>
-            <div class="Liz-flex-1"></div>
         </div>
     </div>
 
@@ -88,7 +87,7 @@
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-blue" role="tab" id="headingOne">
                     <h4 class="panel-title Liz-container  Liz-flex">
-                        <a role="button" class="Liz-flex-1 panel-a Liz-padding-vertical-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <a role="button" class="Liz-flex-1 panel-a left20p Liz-padding-vertical-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 <pre  class="Liz-text-white">首席设计师      Chief designer</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
@@ -100,7 +99,7 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body Liz-border-0 Liz-container">
-                        <pre class="line-height-24">
+                        <pre class="line-height-24 left20p">
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
@@ -112,7 +111,7 @@
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingTwo">
                     <h4 class="panel-title Liz-container Liz-flex">
-                        <a class="collapsed Liz-flex-1 panel-a Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <a class="collapsed Liz-flex-1 panel-a left20p Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 <pre class="Liz-text-black">设计助理      Design assistant</pre>
                         </a>
                         <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
@@ -124,7 +123,7 @@
                 </div>
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body Liz-border-0 Liz-container">
-                        <pre>
+                        <pre class="line-height-24 left20p">
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
@@ -136,7 +135,7 @@
             <div class="panel panel-default Liz-border-0 Liz-margin-top-0">
                 <div class="panel-heading Liz-bg-default" role="tab" id="headingThree">
                     <h4 class="panel-title Liz-container  Liz-flex">
-                    <a class="collapsed Liz-flex-1 panel-a  Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <a class="collapsed Liz-flex-1 panel-a left20p  Liz-padding-vertical-lg" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 <pre class="Liz-text-black">拓展主管      Development director</pre>
                     </a>
                      <div class="Liz-flex-1 Liz-fullWidth Liz-padding-vertical-lg">
@@ -148,7 +147,7 @@
                 </div>
                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                     <div class="panel-body Liz-border-0 Liz-container">
-                        <pre>
+                        <pre class="line-height-24 left20p">
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
 2、把握市场流行趋势，收集国内外潮流信息，了解国内外服
 1、服装设计相关专业，五年以上品牌时尚女装设计师工作经验，本科学历；
